@@ -2,6 +2,12 @@
 # Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+*sabnzbd-0.7.20 (23 Nov 2014)
+
+  23 Nov 2014; Daniel Rune Jensen (soehest) <drunejensen@gmail.com>
+  +sabnzbd-0.7.20.ebuild:
+  Version bump.
+
 *sabnzbd-0.7.19 (01 Nov 2014)
 
   01 Nov 2014; Daniel Rune Jensen (soehest) <drunejensen@gmail.com>
